<resources>
    <string name="app_name">AutentificacionGoogle</string>
    <string name="invitation">¿Hasta que nivel eres capaz de llegar?</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">¿Has olvidado la contraseña?</string>
    <string name="accept">He leído y acepto los</string>
    <string name="terms">términos y condiciones</string>

    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>

</resources>